<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightningBuzz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtIP">Server IP</string>
    <string name="txtPort">Server Port</string>
    <string name="txtUser">UserID</string>
    <string name="txtKey">Key</string>
    <string name="txtRegister">Register</string>
    <string name="txtBack2">Start Buzzer Round</string>
    <string name="txtBack1">Start Options Round</string>
    <string name="title_activity_options_round">OptionsRoundActivity</string>
    <string name="title_activity_buzzer_round">BuzzerRoundActivity</string>
    <string name="txtOp1">Option 1</string>
    <string name="txtOp2">Option 2</string>
    <string name="txtOp3">Option 3</string>
    <string name="txtOp4">Option 4</string>
    <string name="txtBuzz">Buzz</string>

</resources>