<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsRoundActivity" >

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/Button4"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Button2"
        android:minHeight="50dp"
        android:text="@string/txtOp1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button2"
        android:text="@string/txtOp3"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button3"
        android:text="@string/txtOp4"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/Button3"
        android:layout_below="@+id/Button1"
        android:text="@string/txtOp2"
        android:textSize="25sp" />

</RelativeLayout>